--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mapbox/mapbox-gl-directions": "^4.1.1",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.3.4",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.9.1",
+    "mapbox-gl": "^2.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
